--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# backups & logs
+.backups
+*.log
+*.gz
+npm-debug.log*
+.DS_Store
+.next
+node_modules
+.env*
