--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
+    "dotenv": "^17.2.3",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.2",
     "next": "^15.5.4",
